Cyberduck
https://cyberduck.io/

8.8.0
- [Localize] Tamil Localization

8.7.3
- [Bugfix] Crash when opening application (Windows) (#15535)

8.7.2
- [Bugfix] Missing digest header when commiting large file upload (Box) (#14564)
- [Bugfix] Modification date not set in upload (Dropbox) (#15381)
- [Bugfix] Setting modification date truncates file (SMB) (#15495)

8.7.1
- [Bugfix] Crash when selecting private key outside of ~/.ssh (macOS, Mac App Store)
- [Bugfix] Application scoped bookmark to access file outside of sandbox not saved (macOS, Mac App Store) (#15250)
- [Bugfix] Failure parsing expiration from cached temporary credentials in AWS CLI configuration from AWS SSO (S3) (#15257)
- [Bugfix] Unable to authenticate with S3 (Credentials from AWS Command Line Interface) connection profile (S3) (#15222)
- [Bugfix] Refreshed OAuth tokens not saved in credentials manager (Dropbox, Google Drive, Google Storage, Microsoft OneDrive, SharePoint) (#15309)
- [Bugfix] Failure saving OpenID Connect (OIDC) token in credentials manager (Windows)
- [Bugfix] Failure completing OAuth authentication flow (Dropbox, Microsoft OneDrive, SharePoint) (Windows Store)

8.7.0
- [Feature] SMB (Server Message Block) protocol support (#5368)
- [Feature] Support to login using temporary credentials from Security Token Service (STS API) using OpenID Connect (OIDC) web identity (S3) (#13804)
- [Feature] Login using connection profile for AWS S3/STS + Google (OIDC) (S3)
- [Feature] Login using connection profile for AWS S3/STS + Azure AD (OIDC) (S3)
- [Feature] Support login using OAuth 2.0 in (ownCloud) (#14876)
- [Feature] Allow to create internal share (ownCloud, Nextcloud) (#14197)
- [Feature] Option to automatically download and install updates (macOS)
- [Feature] Set creation date for uploaded files (Backblaze B2, Box, Google Drive)
- [Bugfix] Refresh temporary access credentials obtained from CLI configuration (S3) (#10917)