@@ -88,6 +88,23 @@
 </p>
 <ul data-sparkle-version="8.8.0">
     <li><span class="label label-success">Localize</span> Tamil Localization</li>
+    <li><span class="label label-warning">Bugfix</span> Improved retry and backoff strategy for API errors (Backblaze
+        B2) (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/15601">#15601</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Require signing and encryption by default (SMB) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/15638">#15638</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Support upload to buckets with object lock enabled (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/15557">#15557</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Transfer incomplete message when copying between servers (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/15583">#15583</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Unresponsive application when waiting for transfer to cancel on
+        timeout (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/15671">#15671</a>)
+    </li>
 </ul>
 
 <p>
